test/decl/precedencegroup/parsing.code
// RUN: %target-typecheck-verify-language

precedencegroup; // expected-error {{expected identifier}}

precedencegroup A; // expected-error {{expected '{'}}

precedencegroup B {; // expected-error {{expected operator attribute identifier}}
